# gene-report-reader

./: README.md  pyproject.toml
src/gene_report_reader/: __init__.py  __main__.py  gui.py  ocr_client.py  parser.py
tests/: test_parser.py
